--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,15 @@ $RECYCLE.BIN/
 *.msi
 *.msm
 *.msp
-
+*.cache
+*.dll
+*.pdb
+*.exe
+*.exe.config
+*.exe.manifest
+*.suo
+*FileListAbsolute.txt
+TemporaryGeneratedFile*.cs
 # =========================
 # Operating System Files
 # =========================
